testdata/baselines/reference/submodule/conformance/commonJSImportClassTypeReference.errors.txt
main.js(2,13): error TS2749: 'K' refers to a value, but is being used as a type here. Did you mean 'typeof K'?
mod1.js(6,1): error TS2304: Cannot find name 'exports'.


==== main.js (1 errors) ====
    const { K } = require("./mod1");
    /** @param {K} k */
                ~
!!! error TS2749: 'K' refers to a value, but is being used as a type here. Did you mean 'typeof K'?
    function f(k) {
        k.values()
    }
    
==== mod1.js (1 errors) ====
    class K {
        values() {
            return new K()
        }
    }
    exports.K = K;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    